--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
        <!-- Changing the colour of text -->
-        <h1 style="background-color: rgb(253, 123, 242);">MY RETRO GAME</h1>
+        <h1 style="background-color: rgb(253, 123, 242);text-align: center;">MY RETRO GAME</h1>
         <p></p>
             
         <p1></p1>
