--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
     </head>
+
     <body>
        <!-- Changing the colour of text -->
         <h1 style="background-color: rgb(253, 123, 242);text-align: center;">MY RETRO GAME</h1>
-        <p></p>
-            
-        <p1></p1>
+
+        <!-- Paragraph -->
+        <p>This is my game.</p>
 
         <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
-            
             <br> 
             <br>
             <!-- Making a button -->
