copied code from w3 schools to code a navbar

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
 
         <br>
 
+        <!--Sticky Navbar-->
+        <div id="navbar">
+            <a href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+          </div>
+
         <!--Title/image-->
-        <img class="center" src="days new font.png" 
+        <img class="center" src="days new font.png"  
         alt="Death is at your Side" width="500" height="200">
         <br>
         <img style="width:600px;height:100px;"class="center" src="cbjd.png" 
