--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br> 
 
        <!--Description-->
-        <p style="text-align: center;">"Death is at your side" is a COOL game specifically <br> made 
+        <p style="text-align: center;">"Death is at your side" is a game specifically <br> made 
             for anyone looking for a quick and easy to understand game in their free time. <br>
          Enjoy!</p>
             
@@ -45,16 +45,18 @@
 <body onload="startGame()">
 
         <br> <br> <br> <br> <br> <br>
+        <br> <br> <br> <br> <br> <br>
+
+        <button onmousedown="moveup(-0.2)" onmouseup="accelerate(0.05)">UP</button>
+        <button onmousedown="movedown(0.2)" onmouseup="decelerate(0.05)">DOWN</button>
 
         <!-- Paragraph -->
         <h3 style="text-align: center;">Instructions</h3>
-        <p style="text-align: center;">1. Use the arrow keys to move the character left, right, up, and down.</p>
-        <p style="text-align: center;">2. Eat the blocks and try not to hit the sides!</p>
+        <p style="text-align: center;">1. Use the UP and DOWN buttons to move the character up and down.</p>
+        <p style="text-align: center;">2. Avoid the obstacles and try not to hit the sides!</p>
         <p style="text-align: center;">3. Survive, Strive, Remember, DEATH IS AT YOUR SIDE...</p>
 
-        <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">ACCELERATE</button>
-        <button onmousedown="decelerate(0.2)" onmouseup="decelerate(0.05)">DECELERATE</button>
-            
+
             <br> 
             <br>
 
