Added Maori translations

--- a/index.html
+++ b/index.html
@@ -43,9 +43,18 @@
         <br> 
 
        <!--Description-->
-        <p style="text-align: center;">"Death is at your side" is a game specifically <br> made 
-            for anyone looking for a quick and easy to understand game in their free time. <br>
-         Enjoy!</p>
+        <p style="text-align: center;">"Death is at your side" is a game specifically
+        <br>
+        <em><strong>("Kei tou taha te mate" he kemu motuhake tenei)</strong></em>
+        <br> 
+        made for anyone looking for a quick and easy to understand game in their free time.
+        <br>
+        <em><strong>(hangaia mo te tangata e rapu ana i te keemu tere me te maarama ki o raatau waatea.)</strong></em>
+        <br>
+        Enjoy!
+        <br>
+        <em><strong>Kia pai!</strong></em>
+        </p>
 
          <p></p>
 
@@ -64,8 +73,11 @@
         <!-- Paragraph -->
         <h3 style="text-align: center;">Instructions</h3>
         <p style="text-align: center;">1. Use the UP and DOWN buttons to move the character up and down.</p>
-        <p style="text-align: center;">2. Avoid the obstacles and try not to hit the sides!</p>
+        <p style="text-align: center;"><em><strong>(Whakamahia te ki runga me te iho patene ki te neke i te tangata ki runga, ki raro hoki.)</strong></em></p>
+        <p style="text-align: center;">2. Avoid the obstacles and try not to hit the sides!</p> 
+        <p style="text-align: center;"><em><strong>(Aukati i nga aukati me te ngana kia kaua e pa ki nga taha!)</strong></em></p>
         <p style="text-align: center;">3. Survive, Strive, Remember, DEATH IS AT YOUR SIDE...</p>
+        <p style="text-align: center;"><em><strong>(Ora, Ngana, Mahara, Ko te mate kei to taha ...)</strong></em></p>
 
         <br> <br> <br> <br>
 
