Added restart instruction under game

--- a/index.html
+++ b/index.html
@@ -43,18 +43,20 @@
         <br> 
 
        <!--Description-->
-        <p style="text-align: center;">"Death is at your side" is a game specifically
+       <p style="text-align: center;">"Death is at your side" is a game specifically
         <br>
-        <em><strong>("Kei tou taha te mate" he kemu motuhake tenei)</strong></em>
-        <br> 
-        made for anyone looking for a quick and easy to understand game in their free time.
+        <em><strong>("Kei tou taha te mate" he kemu motuhake tenei)</strong></em>
         <br>
-        <em><strong>(hangaia mo te tangata e rapu ana i te keemu tere me te maarama ki o raatau waatea.)</strong></em>
+        made for anyone looking for a quick and easy to understand game in their free time.
+        <br>
+        <em><strong>(hangaia mo te tangata e rapu ana i te keemu tere me te maarama ki o raatau waatea.)</strong></em>
         <br>
         Enjoy!
         <br>
-        <em><strong>Kia pai!</strong></em>
+        <em><strong>Kia pai!</strong></em>
         </p>
+        
+       <br> <br> <br>
 
          <p></p>
 
@@ -63,12 +65,11 @@
 
 <body onload="startGame()">
 
-    <br> <br>
-
         <button onmousedown="moveup(-0.2)" onmouseup="accelerate(0.05)">UP</button>
         <button onmousedown="movedown(0.2)" onmouseup="decelerate(0.05)">DOWN</button>
+        <p style="text-align: left;">*ctrl r to restart the game</p>
 
-        <br> <br> <br> <br>
+        <br> <br>
 
         <!-- Paragraph -->
         <h3 style="text-align: center;">Instructions</h3>
