Added comments, altered up & down button placement

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
 <body onload="startGame()">
 
-        <button onmousedown="moveup(-0.2)" onmouseup="accelerate(0.05)">UP</button>
-        <button onmousedown="movedown(0.2)" onmouseup="decelerate(0.05)">DOWN</button>
+        <h5><button onmousedown="moveup(-0.2)" onmouseup="accelerate(0.05)">UP</button></h5>
+        <h5><button onmousedown="movedown(0.2)" onmouseup="decelerate(0.05)">DOWN</button></h5>
         <p style="text-align: left;">*ctrl r to restart the game</p>
 
         <br> <br>
